--- a/coc-settings.json
+++ b/coc-settings.json
@@ -12,7 +12,9 @@
         "go"
       ]
     },
-    "lua": { // https://github.com/Alloyed/lua-lsp
+    "lua": { 
+      // https://github.com/Alloyed/lua-lsp
+      //luarocks install --server=http://luarocks.org/dev lua-lsp
       "command": "lua-lsp",
       "filetypes": [
         "lua"
