--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,17 +1,17 @@
 {
-  "list.source.files.args": ["--hidden", "--files", "-uu"],
-  "list.source.grep.args": ["--hidden", "-uu"],
+  //"list.source.files.args": ["--hidden", "--files", "-uu"],
+  "list.source.files.args": ["--hidden", "--files"],
+  "list.source.grep.args": ["--hidden"],
   "list.source.mru.maxLength": 4096,
-  "list.maxHeight": 20,
-  "list.autoResize": false,
+  "list.height": 20,
   "suggest.echodocSupport": true,
   "suggest.noselect": false,
-  "suggest.enablePreview":true,
-  "suggest.fixInsertedWord": false,
+  "suggest.fixInsertedWord": true,
   "suggest.removeDuplicateItems": true,
   "vetur.format.enable": true,
   "vetur.format.options.tabSize": 2,
   "codeLens.enable": true,
+  "coc.preferences.formatOnSaveFiletypes": ["dart"],
   "languageserver": {
     "golang": {
       "command": "gopls",
