--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
 /.netrwhist
-/init_local.vim
-/plugin_local.vim
-/autoload/plug.vim.old
+
 /autoload/plug.vim
-/preset_local.vim
+/autoload/plug.vim.old
 /site/autoload/plug.vim
+
+/init.local.vim
+/init/*.local.vim
+/plugins.local
+/plugins.local.vim
+/preset.vim
