--- a/tasks.ini
+++ b/tasks.ini
@@ -8,6 +8,7 @@ command:sh=sh "$(VIM_FILENAME)"
 command:lua=lua "$(VIM_FILENAME)"
 command:perl=perl "$(VIM_FILENAME)"
 command:ruby=ruby "$(VIM_FILENAME)"
+command:php=php "$(VIM_FILENAME)"
 output=terminal
 cwd=$(VIM_FILEDIR)
 save=1
